<resources>
    <string name="app_name">10119171Latihan2</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="facebook">CONNECT TO FACEBOOK</string>
    <string name="doesnt">doesn\'t have account?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="retype">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="homeaddress">Home Address</string>
    <string name="location">Default Location</string>
    <string name="agree">Agree with Terms and Conditions</string>
    <string name="register2">REGISTER</string>
    <string name="almost">Almost There</string>
    <string name="thank">Thank you for registering with us. One more</string>
    <string name="thank2">step, you need to check your email</string>
    <string name="thank3">to active your account</string>
    <string name="verify">VERIFY</string>
    <string name="verify2">Verify Your Account</string>
    <string name="we">We have send verification code to your email</string>
    <string name="enter">enter verification code here...</string>
    <string name="send">SEND</string>
    <string name="doesn">doesn\'t get the code?</string>
    <string name="resend">Resend</string>
    <string name="nama">Yolanda Octaviane</string>
    <string name="bloodtype">Blood type : B</string>
    <string name="tujuhlima">75</string>
    <string name="bloodgive">Blood Give</string>
    <string name="seratus">100</string>
    <string name="bloodreceived">Blood Received</string>
    <string name="tigaratus">300</string>
    <string name="thanks">Thanks</string>
    <string name="search">Search Donor</string>
    <string name="search2">Search donor near you</string>
    <string name="bloodneed">Blood Needed</string>
    <string name="userneed">4 Users need blood</string>
    <string name="message">Message</string>
    <string name="newmessage">5 New Messages</string>
    <string name="donorhistory">Donor History</string>
    <string name="gives">5 Gives, 2 Received</string>
</resources>