<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_header"
        android:orientation="horizontal"
        android:elevation="@dimen/dimen4">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_header_back"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dimen30"
            android:onClick="back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font18"
            android:layout_marginLeft="@dimen/dimen25"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen10"
        android:layout_marginLeft="@dimen/dimen20"
        android:layout_marginRight="@dimen/dimen20">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/hex"
            android:backgroundTint="@color/hex"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/hex"
            android:backgroundTint="@color/hex"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/dimen4"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/hex"
            android:backgroundTint="@color/hex"
            android:layout_marginTop="@dimen/dimen4"/>
        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/hex"
                android:buttonTint="@color/hex"
                android:layout_weight="50"
                android:layout_marginLeft="@dimen/dimen25"/>
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/hex"
                android:buttonTint="@color/hex"
                android:layout_weight="50"
                android:layout_marginLeft="@dimen/dimen25"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen4">
            <Spinner
                android:id="@+id/blood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/bloodtype"
                android:layout_marginLeft="@dimen/dimen25"/>
            <Spinner
                android:id="@+id/reshus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen35"
                android:entries="@array/rhesus"/>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/hex"
            android:backgroundTint="@color/hex"
            android:layout_marginTop="@dimen/dimen4"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retype"
            android:textColor="@color/hex"
            android:backgroundTint="@color/hex"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen4"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/personal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/personal"
                android:textColor="@color/hex"
                android:backgroundTint="@color/hex"
                android:layout_marginLeft="@dimen/dimen25"/>
            <RadioButton
                android:id="@+id/organization"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/organization"
                android:textColor="@color/hex"
                android:backgroundTint="@color/hex"
                android:layout_marginLeft="@dimen/dimen80"/>
        </RadioGroup>
        <Spinner
            android:id="@+id/job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/job"
            android:layout_marginTop="@dimen/dimen4">
        </Spinner>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeaddress"
            android:textColor="@color/hex"
            android:backgroundTint="@color/hex"
            android:layout_marginTop="@dimen/dimen4"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/hex"
            android:backgroundTint="@color/hex"
            android:layout_marginTop="@dimen/dimen4"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen4">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree"
                android:textColor="@color/hex"
                android:backgroundTint="@color/hex"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register2"
            android:textColor="@color/picton_blue"
            android:background="@drawable/border_blue"
            android:onClick="register"/>

    </LinearLayout>
    </RelativeLayout>
</ScrollView>