<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/picton_blue"
    tools:context=".Verifikasi">

    <TextView
        android:id="@+id/almost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/almost"
        android:textColor="@color/white"
        android:textSize="42dp"
        android:textAlignment="center"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/araboto_light"/>
    <TextView
        android:id="@+id/thank"
        android:layout_below="@+id/almost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank"
        android:textColor="@color/white"
        android:textSize="@dimen/font14"
        android:textAlignment="center"
        android:fontFamily="@font/araboto_light"/>

    <TextView
        android:id="@+id/thank2"
        android:layout_below="@+id/thank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank2"
        android:textColor="@color/white"
        android:textSize="@dimen/font14"
        android:textAlignment="center"
        android:fontFamily="@font/araboto_light"/>

    <TextView
        android:id="@+id/thank3"
        android:layout_below="@+id/thank2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank3"
        android:textColor="@color/white"
        android:textSize="@dimen/font14"
        android:textAlignment="center"
        android:fontFamily="@font/araboto_light"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_below="@+id/thank3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textSize="@dimen/font14"
        android:textColor="@color/white"
        android:background="@drawable/border_button"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen80"
        android:layout_marginRight="@dimen/dimen30"
        android:layout_marginLeft="@dimen/dimen30"
        android:onClick="verify"/>



</RelativeLayout>