<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/picton_blue"
    tools:context=".Verifikasi_code">

    <TextView
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify2"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen35"
        android:textAlignment="center"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/araboto_light"/>
    <TextView
        android:id="@+id/we"
        android:layout_below="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we"
        android:textColor="@color/white"
        android:textSize="@dimen/font14"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen6"
        android:fontFamily="@font/araboto_light"/>

    <EditText
        android:id="@+id/enter"
        android:layout_below="@+id/we"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="@dimen/font16"
        android:textAlignment="center"
        android:backgroundTint="@color/white"
        android:layout_marginTop="@dimen/dimen30"
        android:layout_marginLeft="@dimen/dimen20"
        android:layout_marginRight="@dimen/dimen20"
        android:fontFamily="@font/araboto_light"/>



    <androidx.appcompat.widget.AppCompatButton

        android:layout_below="@+id/enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textSize="@dimen/font14"
        android:textColor="@color/white"
        android:background="@drawable/border_button"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen20"
        android:layout_marginRight="@dimen/dimen30"
        android:layout_marginLeft="@dimen/dimen30"
        android:onClick="send"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen20">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/doesn"
            android:textSize="@dimen/font16"
            android:textColor="@color/white"
            android:fontFamily="@font/araboto_light"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
            android:textSize="@dimen/font16"
            android:textStyle="bold"
            android:onClick="register"
            android:fontFamily="@font/araboto_light"/>
    </LinearLayout>


    </LinearLayout>

