<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".user">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_header_profile" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen30"
            android:layout_marginTop="@dimen/dimen20"
            android:src="@drawable/ic_side_menu" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20"
            android:layout_marginLeft="350dp"
            android:src="@drawable/ic_notification" />


        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginLeft="143dp"
            android:layout_marginTop="82dp"
            android:src="@drawable/yolan" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/name_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_profile"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textColor="@color/picton_blue"
            android:textSize="@dimen/font20"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bloodtype"
            android:textColor="@color/black"
            android:textAlignment="center"/>
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/hex"
        android:layout_below="@+id/name_profile"
        android:layout_marginTop="@dimen/dimen10"/>

    <LinearLayout
        android:id="@+id/bloods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen14"
        android:layout_marginLeft="@dimen/dimen30"
        android:layout_marginRight="@dimen/dimen30"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tujuhlima"
                android:textColor="@color/picton_blue"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bloodgive"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seratus"
                android:textColor="@color/picton_blue"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bloodreceived"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tigaratus"
                android:textColor="@color/picton_blue"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thanks"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/hex"
        android:layout_below="@+id/bloods"
        android:layout_marginTop="@dimen/dimen10"/>

    <LinearLayout
        android:layout_below="@id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen30"
        android:layout_marginLeft="@dimen/dimen30"
        android:layout_marginRight="@dimen/dimen30"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginLeft="@dimen/dimen14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_search_donor"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font18"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search2"
                    android:textSize="@dimen/font14"
                    android:textColor="@color/hex"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="@dimen/dimen50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_blood_needed"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bloodneed"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font18"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userneed"
                    android:textSize="@dimen/font14"
                    android:textColor="@color/hex"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/dimen20"
            android:layout_marginLeft="@dimen/dimen30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_marginTop="@dimen/dimen16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_message"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font18"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newmessage"
                    android:textSize="@dimen/font14"
                    android:textColor="@color/hex"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/dimen16"
                android:layout_marginLeft="65dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_donor_history"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/donorhistory"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font18"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gives"
                    android:textSize="@dimen/font14"
                    android:textColor="@color/hex"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>







