<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/picton_blue"
    tools:context=".Login">

    //logo blood share
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen20">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_welcome_logo"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen80"/>

        //text username
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="@dimen/font16"
            android:backgroundTint="@color/white"
            android:layout_marginTop="@dimen/dimen30"
            android:layout_marginLeft="@dimen/dimen20"
            android:layout_marginRight="@dimen/dimen20"/>

        //text password
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/font16"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginTop="@dimen/dimen10"
            android:layout_marginLeft="@dimen/dimen20"
            android:layout_marginRight="@dimen/dimen20"/>

        //button login
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/border_button"
            android:textColor="@color/white"
            android:textSize="@dimen/font16"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen20"
            android:layout_marginRight="@dimen/dimen20"
            android:layout_marginLeft="@dimen/dimen20"/>

        //text OR
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/or"
            android:textSize="@dimen/font16"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen20"
            android:layout_marginLeft="@dimen/dimen20"
            android:layout_marginRight="@dimen/dimen20"/>

        //button connect to facebook
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:background="@drawable/border_button"
            android:textColor="@color/white"
            android:textSize="@dimen/font16"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_welcome_fb_login"
            android:paddingLeft="60dp"
            android:paddingRight="90dp"
            android:layout_marginTop="@dimen/dimen20"
            android:layout_marginRight="@dimen/dimen20"
            android:layout_marginLeft="@dimen/dimen20"/>

        //text doesn't have account
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen20">

            //text register (bisa di tekan)
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doesnt"
                android:textSize="@dimen/font16"
                android:textColor="@color/white"
                android:fontFamily="@font/araboto_light"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/font16"
                android:textStyle="bold"
                android:onClick="register"
                android:fontFamily="@font/araboto_light"/>
        </LinearLayout>
</LinearLayout>
</RelativeLayout>